opam-version: "1.2"
maintainer: "Dario Teixeira <dte@issuu.com>"
author: "Team Raccoon"
homepage: "https://github.com/issuu/ppx_mysql"
dev-repo: "git@github.com:issuu/ppx_mysql.git"
available: [ ocaml-version >= "4.03.0" ]
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name]]
depends: [
  "alcotest" {test & >= "0.8" & < "0.9"}
  "dune" {build}
  "ppxlib" {>= "0.2" & < "0.3"}
  "ppx_deriving" {test & >= "4.2" & < "5.0"}
  "re" {>= "1.7" & < "2.0"}
]
