opam-version: "2.0"
maintainer: "Dario Teixeira <dte@issuu.com>"
author: "Team Raccoon"
synopsis: "Syntax extension for facilitating usage of MySQL bindings"
homepage: "https://github.com/issuu/ppx_mysql"
dev-repo: "git+https://github.com/issuu/ppx_mysql.git"
bug-reports: "https://github.com/issuu/ppx_mysql/issues"
doc: "https://issuu.github.io/ppx_mysql/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "alcotest" {with-test & >= "0.8" & < "0.9"}
  "dune" {build}
  "ocamlformat" {with-test}
  "ocaml" {>= "4.03.0" }
  "ppxlib" {>= "0.2" & < "0.4"}
  "ppx_deriving" {with-test & >= "4.2" & < "5.0"}
]
