opam-version: "2.0"
maintainer: "Dario Teixeira <dte@issuu.com>"
author: "Team Raccoon"
homepage: "https://github.com/issuu/ppx_mysql"
dev-repo: "git+https://github.com/issuu/ppx_mysql.git"
bug-reports: "https://github.com/issuu/ppx_mysql/issues"
doc: "https://issuu.github.io/ppx_mysql/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "mysql" {>= "1.2" & < "2.0"}
  "ocaml" {>= "4.03.0"}
  "ppx_mysql" {= version}
]
