opam-version: "2.0"
maintainer: "Dario Teixeira <dte@issuu.com>"
author: "Team Raccoons at Issuu"
synopsis: "Convenience package for using ppx_mysql with Mysql and the identity monad for IO"
description: """
The ppx_mysql extension expects the existence of several modules in the current context.
This package provides the definition of those modules for using ppx_mysql with Mysql
(via OPAM's mysql package) and the identity monad for IO.
"""
homepage: "https://github.com/issuu/ppx_mysql"
dev-repo: "git+https://github.com/issuu/ppx_mysql.git"
bug-reports: "https://github.com/issuu/ppx_mysql/issues"
doc: "https://issuu.github.io/ppx_mysql/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "1.4"}
  "mysql" {>= "1.2" & < "2.0"}
  "ocaml" {>= "4.06.0"}
  "ppx_mysql" {= version}
]
