opam-version: "1.2"
maintainer: "Dario Teixeira <dte@issuu.com>"
author: "Team Raccoon"
homepage: "https://github.com/issuu/ppx_mysql"
dev-repo: "https://github.com/issuu/ppx_mysql.git"
bug-reports: "https://github.com/issuu/ppx_mysql/issues"
doc: "https://issuu.github.io/ppx_mysql/"
available: [ ocaml-version >= "4.03.0" ]
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name]]
depends: [
  "dune" {build}
  "lwt" {>= "4.0" & < "5.0"}
  "mysql" {>= "1.2" & < "2.0"}
  "ppx_mysql" {= "0.1"}
]
