opam-version: "2.0"
maintainer: "Roddy MacSween"
author: "Roddy MacSween"
synopsis: "Syntax extension that generates Caqti/PostgreSQL code"
description: """Generates Caqti/PostgreQL in a similar way to ppx_mysql.
"""
homepage: "https://github.com/roddyyaga/ppx_rapper"
dev-repo: "git+https://github.com/roddyyaga/ppx_rapper.git"
bug-reports: "https://github.com/roddyyaga/ppx_rapper/issues"
doc: "https://github.com/roddyyaga/ppx_rapper"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "alcotest" {with-test & >= "0.8" & < "0.9"}
  "dune" {>= "1.4"}
  "ocamlformat" {with-test & >= "0.9" & < "0.10"}
  "ocaml" {>= "4.06.0" }
  "ppx_deriving" {with-test & >= "4.2" & < "5.0"}
  "ppxlib" {>= "0.2" & < "0.9"}
  "stdlib-shims"
]
